--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 
    <link rel="stylesheet" href="center.css">
+   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
 
 </head>
 
@@ -18,7 +19,7 @@
 
 <!-- COVER -->
 <div class="container">	
-  <a href="#">
+  <a href="https://www.facebook.com/songhopluc/?__tn__=%2Cd%2CP-R&eid=ARA4xuTtAy9DKQFNU-d8iLpqT3Ms0cIYXBkyJ_P6Lqk2J2atc-pa8ZAQR6851ZRYoo9npet5FurXRQzd">
 		<img src="https://i.ibb.co/wYMP9XR/COVER.jpg" width="660px"/>
   </a>  
 </div>
@@ -134,4 +135,8 @@
 
 </div>
 </body>
+<script>
+
+
+</script>
 </html>	
