--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- BANNER -->
 <div class="container">	
-  <a href="#">
+  <a href="https://www.facebook.com/songhopluc/posts/1574227836063728">
 		<img src="https://i.ibb.co/cNxFPX0/BANNER-1.jpg" width="660px"/>
   </a>  
 </div>
@@ -67,7 +67,7 @@
    		<h4>
 		CEAF pickled Mustard Slice 800g
    	</h4>
-      <a href="#">
+      <a href="https://www.facebook.com/songhopluc/?__tn__=%2Cd%2CP-R&eid=ARA4xuTtAy9DKQFNU-d8iLpqT3Ms0cIYXBkyJ_P6Lqk2J2atc-pa8ZAQR6851ZRYoo9npet5FurXRQzd">
    		<button class='btn'>SHOP NOW</button>
       </a> 
 	</div>
@@ -79,7 +79,7 @@
    		<h4>
    		SMH Matcha Azuki Pau
    	</h4>
-      <a href="#">
+      <a href="https://www.facebook.com/songhopluc/?__tn__=%2Cd%2CP-R&eid=ARA4xuTtAy9DKQFNU-d8iLpqT3Ms0cIYXBkyJ_P6Lqk2J2atc-pa8ZAQR6851ZRYoo9npet5FurXRQzd">
    		<button class='btn'>SHOP NOW</button>
       </a> 
 	</div>	
@@ -91,13 +91,13 @@
 
  	
     <div class="one">
-      <a href="https://www.facebook.com/songhopluc/?__tn__=%2Cd%2CP-R&eid=ARA4xuTtAy9DKQFNU-d8iLpqT3Ms0cIYXBkyJ_P6Lqk2J2atc-pa8ZAQR6851ZRYoo9npet5FurXRQzd">
+      <a href="#">
       <img src="https://i.ibb.co/qmXzHmC/VEGAN-FOOD9.jpg" width="330"/>
       </a>  
       <h4>
       ChiMei Frozen malai sweet bun 480g
   </h4>
-      <a href="#">
+      <a href="https://www.facebook.com/songhopluc/?__tn__=%2Cd%2CP-R&eid=ARA4xuTtAy9DKQFNU-d8iLpqT3Ms0cIYXBkyJ_P6Lqk2J2atc-pa8ZAQR6851ZRYoo9npet5FurXRQzd">
       <button class='btn'>SHOP NOW</button>
       </a> 
   </div>
@@ -109,7 +109,7 @@
       <h4>
       Natural Food Vegetarian Beef Ball 600g
   </h4>
-      <a href="#">
+      <a href="https://www.facebook.com/songhopluc/?__tn__=%2Cd%2CP-R&eid=ARA4xuTtAy9DKQFNU-d8iLpqT3Ms0cIYXBkyJ_P6Lqk2J2atc-pa8ZAQR6851ZRYoo9npet5FurXRQzd">
       <button class='btn'>SHOP NOW</button>
       </a> 
   </div>  
@@ -126,8 +126,8 @@
     <img src="https://i.ibb.co/wgpSxMK/shl-logo-02.png" width="70px" id="logo"/>
     </a> 
     <div class="icon">
-    <a href="#" class="fa facebook"><img src="https://image.flaticon.com/icons/png/512/124/124010.png" width="30px"/></a>
-    <a href="#" class="fa youtube"><img src="https://image.flaticon.com/icons/png/512/124/124015.png" width="30px"/></a>
+    <a href="https://www.facebook.com/songhopluc/?__tn__=%2Cd%2CP-R&eid=ARA4xuTtAy9DKQFNU-d8iLpqT3Ms0cIYXBkyJ_P6Lqk2J2atc-pa8ZAQR6851ZRYoo9npet5FurXRQzd" class="fa facebook"><img src="https://image.flaticon.com/icons/png/512/124/124010.png" width="30px"/></a>
+    <a href="https://www.youtube.com/channel/UCDibTPTd15npQxaLTJQNSYg" class="fa youtube"><img src="https://image.flaticon.com/icons/png/512/124/124015.png" width="30px"/></a>
     </div>
   <div>
 </div>
