--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class='center'>
-<a href="https://emailsample123.000webhostapp.com/index.html#">
+<a href="https://nchivo.github.io/SHL.github.io/#">
 <p id="viewinb">view in browser</p>
 </a>
 
